still need to fix the styling of the pie component so it doesn't overflow

--- a/components/pages/page.module.scss
+++ b/components/pages/page.module.scss
@@ -15,8 +15,13 @@
   }
 
   &__nav {
+    position: fixed;
+    bottom: 0;
+    // right: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    width: 100%;
+    padding: 10rem;
 
     &__back {
       padding-left: 2rem;
