--- a/components/transition/section.module.scss
+++ b/components/transition/section.module.scss
@@ -1,6 +1,4 @@
 .section {
-  margin-top: 36rem;
-
   &__desc {
     font-size: 2.4rem;
     text-align: center;
